--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,9 +11,13 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
+    --background-start-rgb: #E3E7DF;
     --background-end-rgb: 0, 0, 0;
   }
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 body {
